--- a/index.html
+++ b/index.html
@@ -6983,9 +6983,9 @@ function getCategoryName(categoryKey) {
 }
 
 // View More Products button
-document.querySelector('.view-more-btn').addEventListener('click', function() {
-    alert('Viewing all products... In a real application, this would show more products or redirect to the full catalog page.');
-});
+// document.querySelector('.view-more-btn').addEventListener('click', function() {
+//     alert('Viewing all products... In a real application, this would show more products or redirect to the full catalog page.');
+// });
 
 // Initialize shop collection when page loads
 document.addEventListener('DOMContentLoaded', function() {
